# egaznepy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  environment.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
egaznepy/: __init__.py  egaznepy.mplstyle  helpers.py  python_server.py  visualize.py
tests/test_example/: test_hello.py  test_helpers.py  test_visualize.py
